feat(SaleServiceTest): update AddTicketToCustomer verification and handle CustomerNotFoundException